[gd_scene load_steps=19 format=3 uid="uid://d2v54xlxhspxn"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_uckyl"]
[ext_resource type="Script" path="res://scripts/state_manager.gd" id="2_7r3s5"]
[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="2_c7r2k"]
[ext_resource type="Script" path="res://scripts/task_manager.gd" id="3_5h744"]
[ext_resource type="Script" path="res://scripts/scene_manager.gd" id="4_nthw3"]
[ext_resource type="Texture2D" uid="uid://0scwvypre7xh" path="res://graphics/main_background.svg" id="5_13g4r"]
[ext_resource type="Script" path="res://scripts/login_manager.gd" id="5_m3t6l"]
[ext_resource type="PackedScene" uid="uid://buhyma3thhvsr" path="res://scenes/game/main_menu.tscn" id="6_uexxm"]
[ext_resource type="PackedScene" uid="uid://bewnwvp14pvsh" path="res://scenes/game/game_screen.tscn" id="7_plp0g"]
[ext_resource type="PackedScene" uid="uid://cvldgsjh7nl1c" path="res://scenes/game/ingame_menu.tscn" id="8_s2br5"]
[ext_resource type="PackedScene" uid="uid://dv6uht3s2mdrb" path="res://scenes/login/login_data.tscn" id="9_7atw0"]
[ext_resource type="PackedScene" uid="uid://cnu33pet08tkr" path="res://scenes/game/acceptance_component.tscn" id="10_gyxay"]
[ext_resource type="PackedScene" uid="uid://b4vcava3hvsx2" path="res://scenes/game/game_over.tscn" id="10_y5txm"]
[ext_resource type="FontFile" uid="uid://bt2bt7raa04xh" path="res://fonts/VT323-Regular.ttf" id="11_il6a7"]
[ext_resource type="PackedScene" uid="uid://b1mrpd50t5dir" path="res://scenes/serwery_i_pliki/email_box.tscn" id="11_sv30a"]
[ext_resource type="VideoStream" path="res://videos/gameintro.ogv" id="12_ss6wg"]
[ext_resource type="PackedScene" uid="uid://domykhnyxhu3w" path="res://scenes/game/settings.tscn" id="13_5fveu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t3kk3"]
texture = ExtResource("5_13g4r")

[node name="Game" type="Node"]
script = ExtResource("1_uckyl")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("2_c7r2k")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="AudioManager"]

[node name="EffectPlayer" type="AudioStreamPlayer" parent="AudioManager"]

[node name="StateManager" type="Node" parent="."]
script = ExtResource("2_7r3s5")

[node name="TaskManager" type="Node" parent="."]
script = ExtResource("3_5h744")
time_until_next_task = 2.0

[node name="LoginManager" type="Node" parent="TaskManager"]
script = ExtResource("5_m3t6l")
current_tfa_rule = "TFA3"

[node name="TaskTimeLeftTimer" type="Timer" parent="TaskManager"]

[node name="NextTaskTimer" type="Timer" parent="TaskManager"]

[node name="SceneManager" type="Node" parent="."]
script = ExtResource("4_nthw3")

[node name="GameScenes" type="CanvasLayer" parent="SceneManager"]

[node name="BG" type="Panel" parent="SceneManager/GameScenes"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t3kk3")

[node name="MainMenuMargin" type="MarginContainer" parent="SceneManager/GameScenes"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="MainMenu" parent="SceneManager/GameScenes/MainMenuMargin" instance=ExtResource("6_uexxm")]
layout_mode = 2

[node name="GameScreen" parent="SceneManager/GameScenes" instance=ExtResource("7_plp0g")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 600.0
offset_bottom = 500.0
grow_horizontal = 1
grow_vertical = 1
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="IngameMenu" parent="SceneManager/GameScenes" instance=ExtResource("8_s2br5")]
visible = false
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="LoginData" parent="SceneManager/GameScenes" instance=ExtResource("9_7atw0")]
visible = false
offset_left = 121.0
offset_top = 98.0
offset_right = 683.0
offset_bottom = 439.0

[node name="GameOver" parent="SceneManager/GameScenes" instance=ExtResource("10_y5txm")]
visible = false

[node name="EmailBox" parent="SceneManager/GameScenes" instance=ExtResource("11_sv30a")]
visible = false
offset_left = -928.0
offset_top = -94.0
offset_right = 834.0
offset_bottom = 899.0

[node name="Settings" parent="SceneManager/GameScenes" instance=ExtResource("13_5fveu")]
visible = false

[node name="UI" type="CanvasLayer" parent="SceneManager"]
visible = false

[node name="AcceptanceComponent" parent="SceneManager/UI" instance=ExtResource("10_gyxay")]
offset_left = 1460.0
offset_top = 60.0
offset_right = 1860.0
offset_bottom = 360.0
match_info_disappearance_time = 3.0

[node name="TaskBarContainer" type="PanelContainer" parent="SceneManager/UI"]
offset_left = 60.0
offset_top = 970.0
offset_right = 1860.0
offset_bottom = 1050.0

[node name="TaskBarIcons" type="HBoxContainer" parent="SceneManager/UI/TaskBarContainer"]
layout_mode = 2

[node name="OSButton" type="Button" parent="SceneManager/UI/TaskBarContainer/TaskBarIcons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("11_il6a7")
theme_override_font_sizes/font_size = 48
text = "LLOS"

[node name="Separator" type="Control" parent="SceneManager/UI/TaskBarContainer/TaskBarIcons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 11.0

[node name="DateTime" type="RichTextLabel" parent="SceneManager/UI/TaskBarContainer/TaskBarIcons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
theme_override_fonts/normal_font = ExtResource("11_il6a7")
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[center]Day 1 00:00[/center]"
fit_content = true

[node name="Intro" type="VideoStreamPlayer" parent="SceneManager"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("12_ss6wg")

[node name="Tick" type="Timer" parent="."]

[node name="StrikeTimer" type="Timer" parent="."]

[connection signal="change_state" from="." to="StateManager" method="_on_game_change_state"]
[connection signal="game_over" from="." to="StateManager" method="_on_game_game_over"]
[connection signal="game_over" from="." to="TaskManager" method="_on_game_game_over"]
[connection signal="intro" from="." to="SceneManager" method="_on_game_intro"]
[connection signal="new_day" from="." to="TaskManager" method="_on_game_new_day"]
[connection signal="start_new_game" from="." to="TaskManager" method="_on_game_start_new_game"]
[connection signal="start_new_game" from="." to="SceneManager" method="_on_game_start_new_game"]
[connection signal="update_datetime" from="." to="SceneManager" method="_on_game_update_datetime"]
[connection signal="update_strikes" from="." to="SceneManager" method="_on_game_update_strikes"]
[connection signal="finished" from="AudioManager/MusicPlayer" to="AudioManager" method="_on_music_player_finished"]
[connection signal="new_scene" from="StateManager" to="SceneManager" method="_on_state_manager_new_scene"]
[connection signal="request_activate_control_buttons" from="StateManager" to="SceneManager" method="_on_state_manager_request_activate_control_buttons"]
[connection signal="request_hide_ui" from="StateManager" to="SceneManager" method="_on_state_manager_request_hide_ui"]
[connection signal="request_pause_ticks" from="StateManager" to="." method="_on_state_manager_request_pause_ticks"]
[connection signal="request_pause_ticks" from="StateManager" to="TaskManager" method="_on_state_manager_request_pause_ticks"]
[connection signal="request_resume_ticks" from="StateManager" to="." method="_on_state_manager_request_resume_ticks"]
[connection signal="request_resume_ticks" from="StateManager" to="TaskManager" method="_on_state_manager_request_resume_ticks"]
[connection signal="request_show_ui" from="StateManager" to="SceneManager" method="_on_state_manager_request_show_ui"]
[connection signal="resume_task" from="StateManager" to="TaskManager" method="_on_state_manager_resume_task"]
[connection signal="add_strike" from="TaskManager" to="." method="_on_task_manager_add_strike"]
[connection signal="new_task" from="TaskManager" to="StateManager" method="_on_task_manager_new_task"]
[connection signal="new_task" from="TaskManager" to="SceneManager" method="_on_task_manager_new_task"]
[connection signal="ready_login_screen" from="TaskManager" to="SceneManager" method="_on_task_manager_ready_login_screen"]
[connection signal="request_enable_controls" from="TaskManager" to="SceneManager" method="_on_task_manager_request_enable_controls"]
[connection signal="resume_task" from="TaskManager" to="SceneManager" method="_on_task_manager_resume_task"]
[connection signal="task_complete" from="TaskManager" to="StateManager" method="_on_task_manager_task_complete"]
[connection signal="task_complete" from="TaskManager" to="SceneManager" method="_on_task_manager_task_complete"]
[connection signal="timeout" from="TaskManager/TaskTimeLeftTimer" to="TaskManager" method="_on_task_time_left_timer_timeout"]
[connection signal="timeout" from="TaskManager/NextTaskTimer" to="TaskManager" method="_on_next_task_timer_timeout"]
[connection signal="exit_button_pressed" from="SceneManager/GameScenes/MainMenuMargin/MainMenu" to="." method="_on_main_menu_exit_button_pressed"]
[connection signal="new_game_button_pressed" from="SceneManager/GameScenes/MainMenuMargin/MainMenu" to="." method="_on_main_menu_new_game_button_pressed"]
[connection signal="settings_button_pressed" from="SceneManager/GameScenes/MainMenuMargin/MainMenu" to="." method="_on_main_menu_settings_button_pressed"]
[connection signal="continue_button_pressed" from="SceneManager/GameScenes/IngameMenu" to="." method="_on_ingame_menu_continue_button_pressed"]
[connection signal="exit_button_pressed" from="SceneManager/GameScenes/IngameMenu" to="." method="_on_ingame_menu_exit_button_pressed"]
[connection signal="exit_to_menu_button_pressed" from="SceneManager/GameScenes/IngameMenu" to="." method="_on_ingame_menu_exit_to_menu_button_pressed"]
[connection signal="settings_button_pressed" from="SceneManager/GameScenes/IngameMenu" to="." method="_on_ingame_menu_settings_button_pressed"]
[connection signal="exit_button_pressed" from="SceneManager/GameScenes/GameOver" to="." method="_on_ingame_menu_exit_button_pressed"]
[connection signal="menu_button_pressed" from="SceneManager/GameScenes/GameOver" to="." method="_on_ingame_menu_exit_to_menu_button_pressed"]
[connection signal="new_record" from="SceneManager/GameScenes/EmailBox" to="TaskManager" method="_on_email_box_new_record"]
[connection signal="back_pressed" from="SceneManager/GameScenes/Settings" to="StateManager" method="_on_settings_back_pressed"]
[connection signal="value_changed" from="SceneManager/GameScenes/Settings" to="AudioManager" method="_on_settings_value_changed"]
[connection signal="accept_pressed" from="SceneManager/UI/AcceptanceComponent" to="TaskManager" method="_on_acceptance_component_accept_pressed"]
[connection signal="decline_pressed" from="SceneManager/UI/AcceptanceComponent" to="TaskManager" method="_on_acceptance_component_decline_pressed"]
[connection signal="get_time_left" from="SceneManager/UI/AcceptanceComponent" to="TaskManager" method="_on_acceptance_component_get_time_left"]
[connection signal="pressed" from="SceneManager/UI/TaskBarContainer/TaskBarIcons/OSButton" to="." method="_on_os_button_pressed"]
[connection signal="finished" from="SceneManager/Intro" to="SceneManager" method="_on_intro_finished"]
[connection signal="timeout" from="Tick" to="." method="_on_tick_timeout"]
[connection signal="timeout" from="StrikeTimer" to="." method="_on_strike_timer_timeout"]
